feat: Se agrega la ruta que recibe y filtra por la unidad
